--- a/py/docker-compose.yml
+++ b/py/docker-compose.yml
@@ -1,10 +1,13 @@
 services:
   # Excel MCP Server (FastMCP SSE / HTTP via uv)
   excel-mcp-server:
-    build: .
+    build:
+      # Use the repository root as build context so we can include/compile the Java implementation under /java
+      context: ..
+      dockerfile: py/Dockerfile
     container_name: excel-mcp-server
-    # Run in SSE transport mode on port 8585 inside the container by default
-    command: ["excel-mcp-server", "-t", "sse", "-p", "8585"]
+    # The Dockerfile ENTRYPOINT is `uv run python -m excel_mcp_server`, so only pass additional args here
+    command: ["-t", "sse", "-p", "8585"]
     ports:
       # Host 8585 -> container 8585 (MCP clients can use http://host.docker.internal:8585/sse)
       - "8585:8585"
@@ -12,4 +15,14 @@ services:
     environment:
       # If your Excel tools require additional environment variables (e.g. Java options),
       # you can define them here.
-      - PYTHONPATH=/app/src
+      - PYTHONPATH=/app/py/src
+      # Public base URL for end-user downloads (required to return download_url)
+      - EXCEL_PUBLIC_BASE_URL=${EXCEL_PUBLIC_BASE_URL}
+      # Container-side directory exposed under /files (defaults to /mnt/data in the server code)
+      - EXCEL_SHARED_DIR=${EXCEL_SHARED_DIR:-/mnt/data}
+    volumes:
+      # LibreChat commonly references files as /mnt/data/... (code tool convention).
+      # Mount the host "shared files" directory to /mnt/data so the MCP server can read/write those paths.
+      # Configure the host path via MCP_SHARED_DIR (e.g. export MCP_SHARED_DIR=/path/to/uploads).
+      # If not set, it defaults to ./shared relative to this compose file directory (excel-mcp/py).
+      - ${MCP_SHARED_DIR:-./shared}:/mnt/data
